tests/003_string.pan.out
tests/003_string.pan:13:6-13: error:
  {_:ğ•Š | _ = "hello"} is not a subtype of {v:ğ•Š | v = "goodbye"}
tests/003_string.pan:16:6-13: error:
  ğ•Š is not a subtype of ğŸ™
tests/003_string.pan:19:6-13: error:
  ğ•Š is not a subtype of ğŸ™
tests/003_string.pan:22:6-13: error:
  ğ•Š is not a subtype of ğ”¹
tests/003_string.pan:25:6-13: error:
  ğ•Š is not a subtype of ğ”¹
tests/003_string.pan:28:6-13: error:
  ğ•Š is not a subtype of â„¤
tests/003_string.pan:31:7-14: error:
  ğ•Š is not a subtype of â„¤
f0 : ğ•Š
f1 : ğ•Š
f2 : {v:ğ•Š | v = "hello"}
f3 : {v:ğ•Š | v = "hello"}